# django-trim

./: .gitignore  DJANGO_VERSIONS.md  LICENSE  MANIFEST.in  README-3.md  README.md  VERSION_UPDATE_COMPLETE.md  dev_install.bat  local.md  pyproject.toml  pytest.ini  quicktest  requirements-test.txt  run_test.py  run_test.sh  setup.py  setup_testing.sh  tox.ini
.github/: copilot-instructions.md
.github/agents/: python-test-maker.agent.md
.github/chatmodes/: py-docs.chatmode.md
.github/instructions/: django.instructions.md  py.instructions.md
.github/workflows/: python-publish.yml  tests.yml
dev/: README.md  gen_docs.py  gen_docs_standalone.py  gen_forms_fields_docs.py  generate.sh
django-short-shorts/: pyproject.toml  setup.py
django-short-shorts/short/: admin.py  apps.py  names.py  oven.py  rand.py  signals.py  urls.py
django-trim/: README.md  build.bat  dev_install.bat  pyproject.toml  setup.py  test_publish.bat
django-trim/docs/: admin.md  forms.md  readme.md  slots.md  urls.md  views.md
django-trim/docs/models/: auto_model_mixin.md  fields.md  live.md  readme.md  short_string.md
django-trim/docs/old/: Custom 404.md  info.md  models.md  notes.md  readme-short.md  urls.md  views.md
django-trim/docs/old/urls/: as_templates.md  path_include.md
django-trim/docs/research/: model condtions.md  readme.md  slots.md  themes.md  trim bundle.md  trim more.md  trim-scripts.md
django-trim/docs/research/cburls/: example.py
django-trim/docs/templates/tags/: link.md  quickform.md  wrap.md
django-trim/docs/theming/: readme.md
django-trim/docs/views/: authed-views.md  listview.md  serialized.md
django-trim/docs/widgets/: hidden.md
django-trim/src/trim/: __init__.py  admin.py  apps.py  context.py  cuts.py  execute.py  names.py  oven.py  perms.py  rand.py  response.py  signals.py  strings.py  urls.py
django-trim/src/trim/cli/: base.py  primary.py  run.py
django-trim/src/trim/forms/: fields.py  widgets.py
django-trim/src/trim/models/: __init__.py  auto.py  base.py  live.py
django-trim/src/trim/models/fields/: __init__.py  base.py  django.py  wagtail.py
django-trim/src/trim/models/panels/: __init__.py  wagtail.py
django-trim/src/trim/static/js/: ajax-form.js
django-trim/src/trim/templates/trim/: css_link.html  generic-form.html  js_link.html  link.html  quickform.html  script_link.html
django-trim/src/trim/templates/trim/crud/: archive_year.html  base.html  create.html  detail.html  form-page.html  form.html  formset.html  list.html  update.html
django-trim/src/trim/templates/trim/errors/: 500.html  error_base.html
django-trim/src/trim/templatetags/: link.py  quickforms.py  stock.py  trim.py  trim_slots.py
django-trim/src/trim/theming/: __init__.py  apps.py  builtins.py  config.py  context.py
django-trim/src/trim/theming/templates/x_theme/: detail-double-header.html  detail.html  form-page.html  form.html  list.html  page.html
django-trim/src/trim/theming/templates/x_theme/forms/: plain.html
django-trim/src/trim/theming/templates/x_theme/list/: object_list.html
django-trim/src/trim/theming/templatetags/: theming.py
django-trim/src/trim/views/: __init__.py  auth.py  base.py  serialized.py
django-trim/src/trim/views/errors/: __init__.py  custom404.py
django-trim/src/trim/wagtail/: blocks.py  markdown.py
django-trim/trim/: __init__.py  admin.py  apps.py  cuts.py  oven.py  perms.py  signals.py  urls.py
django-trim/trim/cli/: base.py  primary.py  run.py
django-trim/trim/forms/: fields.py  widgets.py
django-trim/trim/models/: __init__.py  auto.py  base.py  fields.py
django-trim/trim/models/fields/: base.py  django.py  wagtail.py
django-trim/trim/models/panels/: __init__.py
django-trim/trim/static/js/: ajax-form.js
django-trim/trim/templates/trim/: generic-form.html  script_link.html
django-trim/trim/templates/trim/crud/: archive_month.html  base.html  create.html  detail.html  form-page.html  list.html
django-trim/trim/templatetags/: datetime.py  link.py  quickforms.py  trim.py
django-trim/trim/theming/: config.py  context.py
django-trim/trim/theming/templates/theme/: form.html  page.html
django-trim/trim/views/: __init__.py  auth.py  base.py  serialized.py
django-trim/trim/views/errors/: __init__.py  custom404.py
django-trim/trim/wagtail/: blocks.py  markdown.py
docs/: COMPATIBILITY_MATRIX.md  Custom 404.md  DJANGO_VERSIONS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_STATUS.md  QUICK_REFERENCE.md  README-2.md  README-4.md  README-5.md  TESTING.md  TESTING_QUICK_REFERENCE.md  TESTING_SETUP_COMPLETE.md  TESTING_TROUBLESHOOTING.md  account.md  admin.md  apps.md  documentation_tracking.csv  execute.md  forms.md  info.md  markdown.md  model condtions.md  models.md  perms.md  readme.md  root.md  slots.md  testing.md  trim bundle.md  trim more.md  trim-beacon.md  trim-scripts.md  urls.md  views.md
docs/forms/: all-fields-form.md  fields-auto-template.md  fields-auto.md  quickforms.md  readme.md
docs/frontend/: readme.md
docs/models/: auto_model_mixin.md  fields-auto-template.md  fields-auto.md  fields.md  live.md  readme.md  short_string.md
docs/old/: Custom 404.md  models.md  notes.md  old r.md  readme-short.md  slots.md  urls.md  views.md
docs/recipes/: basic-page.md  readme.md  todo-list.md
docs/research/: readme.md  slots.md  themes.md  trim bundle.md  trim-beacon.md  trim-docs.md
docs/stubs/: README.md  trim_cuts.md  trim_oven.md  trim_perms.md  trim_rand.md
docs/theming/: readme.md
docs/urls/: as_templates.md  functions.md  path_include.md  readme.md
docs/views/: authed-views.md  download.md  files-up-down.md  list-views.md  listview.md  readme.md  serialized.md
docs/widgets/: hidden.md
hooks/: README.md  install.sh  pre-push
src/trim/: __init__.py  (+16 more)
srcdocs/: footer-info.md  old_readme.md  readme.md
tests/: README.md  __init__.py  conftest.py  settings.py  test_admin.py  test_apps.py  test_context.py  test_live.py  test_merge.py  test_rand.py  test_signals.py  test_trim_tests.py  test_updated_params.py  test_urls.py  test_urls_paths_dict.py  urls.py
(+202 files in other folders)
