# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example
[tool.portray]
output_dir = "documentation_website"
modules = ["trim"]
port = 8001

[project]
name = "django-trim"
# version = "0.1a"
authors = [
  { name="Strangemother", email="django-trim@strangemother.com" },
]
description = "Django trim is a facade to the common features of Django providing a layer of sugar for all those daily components."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text='MIT'}
dynamic = ['version']
dependencies = [
  "loguru",
]
 
[project.optional-dependencies]
# Install the optional docs tooling with: pip install "django-trim[docs]"
docs = [
  "trimdocs>=0.1.0a0",
]
# Install test dependencies with: pip install "django-trim[test]"
test = [
  "pytest>=7.0.0",
  "pytest-django>=4.5.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.0.0",  # parallel testing
  "coverage[toml]>=7.0.0",
]
# dynamic
# entry-points
# gui-scripts
# keywords
# license
# maintainers
# optional-dependencies
# scripts
# urls

[tool.setuptools.package-data]
trim = ["**/*.js", "**/*.css","**/*.html"]

[project.scripts]
trim = 'trim.cli.primary:main'
trim-admin = 'trim.cli.primary:main_admin'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "http://github.com/strangemother/django-trim"
"Bug Tracker" = "http://github.com/strangemother/django-trim/issues"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
# Django settings for pytest-django
DJANGO_SETTINGS_MODULE = "tests.settings"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/trim"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/management/commands/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
