# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#example
[tool.portray]
output_dir = "documentation_website"
modules = ["trim"]
port = 8001

[project]
name = "django-trim"
# version = "0.1a"
authors = [
  { name="Just Jay", email="django-trim@strangemother.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text='MIT'}
dynamic = ['version']
# dependencies
# dynamic
# entry-points
# gui-scripts
# keywords
# license
# maintainers
# optional-dependencies
# scripts
# urls


[project.scripts]
trim = 'trim.cli.primary:main'
trim-admin = 'trim.cli.primary:main_admin'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "http://github.com/strangemother/django-trim"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
